--- a/02-hello-accessibility/projects/starter/app/src/main/res/layout/item_onboarding.xml
+++ b/02-hello-accessibility/projects/starter/app/src/main/res/layout/item_onboarding.xml
@@ -47,7 +47,8 @@
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      tools:src="@drawable/onboarding_try" />
+      tools:src="@drawable/onboarding_try"
+      android:contentDescription="@null" />
 
   <TextView
       android:id="@+id/onbarding_text"
